# minesweeper_sdl

./: CMakeLists.txt  Makefile  README.md  game.c  game.h  main.c  minesweeper_sdl.c  minesweeper_sdl.h  minesweeper_text.c
include/: game.h
src/: game.c  minesweeper_text.c
